09-Feb-2016 Fixes #101. For all C module collections with compilable output, a new base class CCompilableModuleContainer is now used. This new class derives from the previous base class, CModuleContainer. This is due to the AddFile method in CModuleContainer not being compatible with a HeaderFileCollection, and so the class hierarchy has been split between compilable and non-compilable collections. An explicit C.HeaderFile module can now be added to a HeaderFileCollection using the AddFile method.

09-Feb-2016 Fixes #91. C container functions that accept multiple source modules (e.g. CompileAgainst, CompilePubliclyAgainst), have had their signatures slightly altered to ensure that at least one source module is passed. Additional source modules can be passed, but are now optional. This moves a runtime test to a compile time test.

09-Feb-2016 Fixes #92. Package XML definition files that do not satisfy the schema syntax now identifies the error by description and location on the terminal.

09-Feb-2016 Fixes #93. Feedback is now provided on the terminal when a package is successfully made.

08-Feb-2016 ======== Version 1.0.1b2 Release ========

08-Feb-2016 Fixes #132. Parsing C source files for header includes no longer tries to match whitespace between the quotes or angle brackets. Without that, any trailing inline comments containing quotes or angle brackets would be included in the regex match. (Assume header files containing spaces are the exception, rather than the rule.)
