@@ -35,149 +35,6 @@ namespace Bam.Core
     /// </summary>
     public sealed class Executor
     {
-        /// <summary>
-        /// Provides a task scheduler that ensures a maximum concurrency level while running on top of the thread pool. Based upon https://msdn.microsoft.com/en-us/library/ee789351.aspx
-        /// </summary>
-        public class LimitedConcurrencyLevelTaskScheduler : System.Threading.Tasks.TaskScheduler
-        {
-            // Indicates whether the current thread is processing work items.
-            [System.ThreadStatic]
-            private static bool _currentThreadIsProcessingItems;
-
-            // The list of tasks to be executed
-            private readonly System.Collections.Generic.LinkedList<System.Threading.Tasks.Task> _tasks = new System.Collections.Generic.LinkedList<System.Threading.Tasks.Task>(); // protected by lock(_tasks)
-
-            // The maximum concurrency level allowed by this scheduler.
-            private readonly int _maxDegreeOfParallelism;
-
-            // Indicates whether the scheduler is currently processing work items.
-            private int _delegatesQueuedOrRunning = 0;
-
-            /// <summary>
-            /// Creates a new instance with the specified degree of parallelism.
-            /// </summary>
-            /// <param name="maxDegreeOfParallelism">Max degree of parallelism.</param>
-            public LimitedConcurrencyLevelTaskScheduler(int maxDegreeOfParallelism)
-            {
-                if (maxDegreeOfParallelism < 1) throw new System.ArgumentOutOfRangeException("maxDegreeOfParallelism");
-                _maxDegreeOfParallelism = maxDegreeOfParallelism;
-            }
-
-            /// <summary>
-            /// Queues a task to the scheduler.
-            /// </summary>
-            /// <param name="task">Task.</param>
-            protected sealed override void QueueTask(System.Threading.Tasks.Task task)
-            {
-                // Add the task to the list of tasks to be processed.  If there aren't enough
-                // delegates currently queued or running to process tasks, schedule another.
-                lock (_tasks)
-                {
-                    _tasks.AddLast(task);
-                    if (_delegatesQueuedOrRunning < _maxDegreeOfParallelism)
-                    {
-                        ++_delegatesQueuedOrRunning;
-                        NotifyThreadPoolOfPendingWork();
-                    }
-                }
-            }
-
-            // Inform the ThreadPool that there's work to be executed for this scheduler.
-            private void NotifyThreadPoolOfPendingWork()
-            {
-                System.Threading.ThreadPool.UnsafeQueueUserWorkItem(_ =>
-                {
-                    // Note that the current thread is now processing work items.
-                    // This is necessary to enable inlining of tasks into this thread.
-                    _currentThreadIsProcessingItems = true;
-                    try
-                    {
-                        // Process all available items in the queue.
-                        while (true)
-                        {
-                            System.Threading.Tasks.Task item;
-                            lock (_tasks)
-                            {
-                                // When there are no more items to be processed,
-                                // note that we're done processing, and get out.
-                                if (_tasks.Count == 0)
-                                {
-                                    --_delegatesQueuedOrRunning;
-                                    break;
-                                }
-
-                                // Get the next item from the queue
-                                item = _tasks.First.Value;
-                                _tasks.RemoveFirst();
-                            }
-
-                            // Execute the task we pulled out of the queue
-                            base.TryExecuteTask(item);
-                        }
-                    }
-                    // We're done processing items on the current thread
-                    finally { _currentThreadIsProcessingItems = false; }
-                }, null);
-            }
-
-            /// <summary>
-            /// Attempts to execute the specified task on the current thread.
-            /// </summary>
-            /// <returns><c>true</c>, if execute task inline was tryed, <c>false</c> otherwise.</returns>
-            /// <param name="task">Task.</param>
-            /// <param name="taskWasPreviouslyQueued">If set to <c>true</c> task was previously queued.</param>
-            protected sealed override bool TryExecuteTaskInline(System.Threading.Tasks.Task task, bool taskWasPreviouslyQueued)
-            {
-                // If this thread isn't already processing a task, we don't support inlining
-                if (!_currentThreadIsProcessingItems) return false;
-
-                // If the task was previously queued, remove it from the queue
-                if (taskWasPreviouslyQueued)
-                    // Try to run the task.
-                if (TryDequeue(task))
-                    return base.TryExecuteTask(task);
-                else
-                    return false;
-                else
-                    return base.TryExecuteTask(task);
-            }
-
-            /// <summary>
-            /// Attempt to remove a previously scheduled task from the scheduler.
-            /// </summary>
-            /// <returns><c>true</c>, if dequeue was tryed, <c>false</c> otherwise.</returns>
-            /// <param name="task">Task.</param>
-            protected sealed override bool TryDequeue(System.Threading.Tasks.Task task)
-            {
-                lock (_tasks) return _tasks.Remove(task);
-            }
-
-            /// <summary>
-            /// Gets the maximum concurrency level supported by this scheduler.
-            /// </summary>
-            /// <value>The maximum concurrency level.</value>
-            public sealed override int MaximumConcurrencyLevel { get { return _maxDegreeOfParallelism; } }
-
-            /// <summary>
-            /// Gets an enumerable of the tasks currently scheduled on this scheduler.
-            /// </summary>
-            /// <returns>The scheduled tasks.</returns>
-            protected sealed override System.Collections.Generic.IEnumerable<System.Threading.Tasks.Task> GetScheduledTasks()
-            {
-                bool lockTaken = false;
-                try
-                {
-                    System.Threading.Monitor.TryEnter(_tasks, ref lockTaken);
-                    if (lockTaken) return _tasks;
-                    else throw new System.NotSupportedException();
-                }
-                finally
-                {
-                    if (lockTaken) System.Threading.Monitor.Exit(_tasks);
-                }
-            }
-        }
-
         private static void
         ExecutePreBuild(
             System.Type metaType)
