@@ -1,3 +1,5 @@
+09-Feb-2016 Fixes #133. Clarified the terms of use of LimitedConcurrencyLevelTaskScheduler from https://msdn.microsoft.com/en-us/library/ee789351.aspx under the Microsoft Limited Public License (MS-PL.md). This code is used in the Core assembly, to control the number of threads in a build with the -j=N switch. This license is mentioned in the Bam command line output. The MS-PL license text is also distributed with BuildAMation. See Microsoft Developer Services Agreement (https://msdn.microsoft.com/en-us/cc300389.aspx), section 2b (Software on Documentation Portals) for details.
+
 09-Feb-2016 Fixes #101. For all C module collections with compilable output, a new base class CCompilableModuleContainer is now used. This new class derives from the previous base class, CModuleContainer. This is due to the AddFile method in CModuleContainer not being compatible with a HeaderFileCollection, and so the class hierarchy has been split between compilable and non-compilable collections. An explicit C.HeaderFile module can now be added to a HeaderFileCollection using the AddFile method.
 
 09-Feb-2016 Fixes #91. C container functions that accept multiple source modules (e.g. CompileAgainst, CompilePubliclyAgainst), have had their signatures slightly altered to ensure that at least one source module is passed. Additional source modules can be passed, but are now optional. This moves a runtime test to a compile time test.
